Update favicon to use hawk emoji SVG

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VR Lab Gateway - YCCC Virtual Reality Learning Center</title>
     <meta name="description" content="York County Community College VR Lab Gateway - Virtual Reality Learning Center" />
